load matlab dataframes

--- a/examples/03-reinagel-2013-dataset.ipynb
+++ b/examples/03-reinagel-2013-dataset.ipynb
@@ -2,15 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.io import loadmat\n",
+    "\n",
+    "\n",
+    "def mat_to_pd(mat):\n",
+    "    \"\"\"load matlab file and select trial variables\"\"\"\n",
+    "    mat = loadmat(mat)\n",
+    "    mat = {\n",
+    "        k: v.squeeze()\n",
+    "        for k, v in mat.items()\n",
+    "        if isinstance(v, np.ndarray) and v.shape == mat[\"RT\"].shape\n",
+    "    }\n",
+    "    return pd.DataFrame(mat)\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "variable descriptions\n",
+    "---------------------\n",
+    "coherence : float\n",
+    "    motion coherence of the trial, between 0-1\n",
+    "correct : 0 or 1\n",
+    "    0 if correct\n",
+    "    1 if error\n",
+    "RT : float\n",
+    "    response time to L/R from stimulus onset\n",
+    "dotDirection : 0 or pi\n",
+    "    direction of the motion, in radians\n",
+    "selectedDuration : float\n",
+    "    duration of the dot display, in seconds\n",
+    "    NaN = unlimited duration\n",
+    "waterSoFar : int\n",
+    "    amount of water consumed from start of session, in a.u.\n",
+    "proposedReward : float\n",
+    "    amount of water rewarded for correct trial, in a.u.\n",
+    "correctionTrial : 0 or 1\n",
+    "    0 if the motion direction was chosen randomly\n",
+    "    1 if the motion direction was the same as the previous failed trial\n",
+    "selectedDotSize : float\n",
+    "    size of dots, in stixels\n",
+    "selectedContrast : float\n",
+    "    constrast of the dots against the background, between 0-1\n",
+    "selectedSpeed : float\n",
+    "    speed of dots, in stixels per frame\n",
+    "proposedPenalty : float\n",
+    "    duration of timeout if error\n",
+    "pctCorrectionTrials : float\n",
+    "    probability of entering correction mode after error, between 0-1\n",
+    "isLoop : 0 or 1\n",
+    "    0 if movie does not loop until response\n",
+    "    1 if movie loops until rat responds\n",
+    "sessionNumber : int\n",
+    "    session is the span of time when rat had access to the game\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "df195 = mat_to_pd(\"datasets/Rat195Vectors_241025.mat\").assign(rat=195)\n",
+    "df196 = mat_to_pd(\"datasets/Rat196Vectors_241025.mat\").assign(rat=196)\n",
+    "df = (\n",
+    "    pd.concat([df195, df196])\n",
+    "    .query(\"Valid == 1\")  # remove disqualified trials (for now)\n",
+    "    .assign(trialDate=lambda x: pd.to_datetime(x[\"trialDate\"] - 719529, unit=\"D\"))\n",
+    "    .set_index(\"trialDate\")\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "dev",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
