--- a/examples/04-fit-drift-diffusion.ipynb
+++ b/examples/04-fit-drift-diffusion.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -65,14 +65,14 @@
    ],
    "source": [
     "# simulation setting\n",
-    "sim_params = {\"tau\": 0.001, \"t\": 0.1, \"z\": -0.5, \"v\": 0.9, \"a\": 3}\n",
+    "sim_params = {\"dt\": 0.001, \"t\": 0.1, \"z\": -0.5, \"v\": 0.9, \"a\": 3}\n",
     "n_trials = 5000\n",
     "\n",
     "# simulate ddm\n",
     "rt, response = np.zeros(n_trials), np.zeros(n_trials, dtype=int)\n",
     "for trace in range(n_trials):\n",
     "    x = sim_ddm(**sim_params, seed=trace)\n",
-    "    rt[trace] = len(x) * sim_params[\"tau\"]\n",
+    "    rt[trace] = len(x) * sim_params[\"dt\"]\n",
     "    response[trace] = (x[-1] > 0) == (sim_params[\"v\"] > 0)\n",
     "df = pd.DataFrame({\"rt\": rt, \"response\": response})\n",
     "sample = pyddm.Sample.from_pandas_dataframe(df, rt_column_name=\"rt\", choice_column_name=\"response\")\n",
@@ -85,7 +85,7 @@
     "    nondecision=\"nd\",\n",
     "    parameters={\"v\": (-2, 2), \"a\": (0.1, 2), \"z\": (-1, 1), \"nd\": (0, 1)},\n",
     "    T_dur=10,\n",
-    "    dt=sim_params[\"tau\"],\n",
+    "    dt=sim_params[\"dt\"],\n",
     ")\n",
     "\n",
     "# fit ddm\n",
