--- a/examples/07-navarro-2009-pdf.ipynb
+++ b/examples/07-navarro-2009-pdf.ipynb
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x16b0a0410>]"
+       "[<matplotlib.lines.Line2D at 0x14c4e0410>]"
       ]
      },
      "execution_count": 2,
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x16b3ae0d0>"
+       "<matplotlib.legend.Legend at 0x14c6ae0d0>"
       ]
      },
      "execution_count": 3,
@@ -239,7 +239,7 @@
     "def loglikelihood(params, samples_upper, samples_lower, epsilon=1e-10):\n",
     "    likelihoods_upper = np.log(pdf(samples_upper, *params, boundary=\"upper\") + epsilon)\n",
     "    likelihoods_lower = np.log(pdf(samples_lower, *params, boundary=\"lower\") + epsilon)\n",
-    "    return np.concatenate([likelihoods_upper, likelihoods_lower])\n",
+    "    return np.concatenate([likelihoods_upper, likelihoods_lower])  # !! check !!\n",
     "\n",
     "\n",
     "def lossloglikelihood(params, samples_upper, samples_lower):\n",
@@ -287,27 +287,46 @@
      "text": [
       "sample hessian estimator:\t [0.03293413 0.02049033 0.02257929]\n",
       "outer product estimator:\t [0.03030133 0.0227341  0.02377251]\n",
-      "misspecification robust estimator:\t [0.03602791 0.01919684 0.02231702]\n"
+      "misspecification robust estimator:\t [0.03602791 0.01919684 0.02231702]\n",
+      "hac robust (newey-west) estimator:\t [0.0864695  0.0300658  0.03037308]\n"
      ]
     }
    ],
    "source": [
+    "def newey_west(x, n_lags=None):\n",
+    "    n = len(x)\n",
+    "    if n_lags is None:\n",
+    "        n_lags = int(np.floor(4 * (n / 100.0) ** (2.0 / 9.0)))\n",
+    "    x = x[:, np.newaxis] if x.ndim == 1 else x\n",
+    "    weights = 1 - np.arange(n_lags + 1) / (n_lags + 1)  # bartlett\n",
+    "    S = x.T @ x\n",
+    "    for lag in range(1, n_lags + 1):\n",
+    "        s = x[lag:].T @ x[:-lag]\n",
+    "        S += weights[lag] * (s + s.T)  # symmetric over +/- lags\n",
+    "    return S\n",
+    "\n",
+    "\n",
     "n = 2 * n_samples  # upper and lower bounds\n",
     "\n",
     "# sample hessian estimator\n",
     "hessian_ = (1 / n) * lll_hessian(fit.x, samples_upper, samples_lower)\n",
-    "hessian_var_ = np.linalg.inv(hessian_)\n",
-    "print(\"sample hessian estimator:\\t\", np.sqrt((1 / n) * np.diag(hessian_var_)))\n",
+    "hessian_cov_ = np.linalg.inv(hessian_)\n",
+    "print(\"sample hessian estimator:\\t\", np.sqrt((1 / n) * np.diag(hessian_cov_)))\n",
     "\n",
     "# outer product estimator\n",
     "jacobian_ = ll_jacobian(fit.x, samples_upper, samples_lower)\n",
-    "fisher_ = np.einsum(\"ij,ik->ijk\", jacobian_, jacobian_).mean(axis=0)\n",
-    "fisher_var_ = np.linalg.inv(fisher_)\n",
-    "print(\"outer product estimator:\\t\", np.sqrt((1 / n) * np.diag(fisher_var_)))\n",
+    "fisher_ = (1 / n) * (jacobian_.T @ jacobian_)  # outer products\n",
+    "fisher_cov_ = np.linalg.inv(fisher_)\n",
+    "print(\"outer product estimator:\\t\", np.sqrt((1 / n) * np.diag(fisher_cov_)))\n",
     "\n",
     "# misspecification robust estimator\n",
-    "robust_var_ = hessian_var_ @ fisher_ @ hessian_var_\n",
-    "print(\"misspecification robust estimator:\\t\", np.sqrt((1 / n) * np.diag(robust_var_)))"
+    "robust_var_ = hessian_cov_ @ fisher_ @ hessian_cov_\n",
+    "print(\"misspecification robust estimator:\\t\", np.sqrt((1 / n) * np.diag(robust_var_)))\n",
+    "\n",
+    "# hac robust (newey-west) estimator\n",
+    "nw_ = (1 / n) * newey_west(jacobian_)\n",
+    "nw_cov_ = hessian_cov_ @ nw_ @ hessian_cov_\n",
+    "print(\"hac robust (newey-west) estimator:\\t\", np.sqrt((1 / n) * np.diag(nw_cov_)))"
    ]
   }
  ],
