add dataset description

--- a/examples/03-reinagel-2013-dataset.ipynb
+++ b/examples/03-reinagel-2013-dataset.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.io import loadmat\n",
+    "from scipy.signal import lombscargle\n",
+    "from statsmodels.tsa.stattools import acf, pacf\n",
     "\n",
     "\n",
     "def mat_to_pd(mat):\n",
@@ -66,9 +69,157 @@
     "df196 = mat_to_pd(\"datasets/Rat196Vectors_241025.mat\").assign(rat=196)\n",
     "df = (\n",
     "    pd.concat([df195, df196])\n",
-    "    .query(\"Valid == 1\")  # remove disqualified trials (for now)\n",
+    "    .query(\"Valid == 1 and RT == RT\")  # remove disqualified trials, and dropna\n",
     "    .assign(trialDate=lambda x: pd.to_datetime(x[\"trialDate\"] - 719529, unit=\"D\"))\n",
     "    .set_index(\"trialDate\")\n",
+    "    .assign(coherence=lambda x: pd.cut(x[\"coherence\"], bins=15, labels=False))  # discretize\n",
+    ")\n",
+    "\n",
+    "df.groupby(\"rat\")[\"RT\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.query(\"rat == 196\")  # select rat 196 (for now)\n",
+    "\n",
+    "fig, axs = plt.subplots(nrows=4, figsize=(15, 6), layout=\"constrained\")\n",
+    "\n",
+    "axs[0].set_title(\"421 days\")\n",
+    "axs[0].plot(df[\"RT\"], \".\", c=\"k\", alpha=0.1)\n",
+    "axs[0].plot(df[\"RT\"].rolling(window=100).agg(\"mean\"), \".\", ms=0.5, c=\"r\")\n",
+    "\n",
+    "axs[1].set_title(\"30 days\")\n",
+    "axs[1].plot(df.loc[\"2008-05\"][\"RT\"], \".\", c=\"k\", alpha=0.5)\n",
+    "\n",
+    "axs[2].set_title(\"1 day\")\n",
+    "axs[2].plot(df.loc[\"2008-05-01\"][\"RT\"], \".\", c=\"k\", alpha=0.5)\n",
+    "\n",
+    "axs[3].set_title(\"1 hour\")\n",
+    "axs[3].plot(df.loc[\"2008-05-01 07\"][\"RT\"], \".\", c=\"k\", alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ACF / PSD\n",
+    "fig, axs = plt.subplots(ncols=3, figsize=(15, 3), sharey=False)\n",
+    "\n",
+    "n_lags = 200\n",
+    "acf_kwargs = dict(fft=True, bartlett_confint=False, missing=\"drop\")\n",
+    "acf_ = acf(df[\"RT\"], nlags=n_lags, **acf_kwargs)\n",
+    "\n",
+    "freqs = np.fft.fftfreq(n_lags + 1)\n",
+    "mask = freqs > 0\n",
+    "freqs = freqs[mask]\n",
+    "powers_wk = np.fft.fft(acf_).real\n",
+    "powers_wk = powers_wk[mask]\n",
+    "\n",
+    "axs[0].set_title(\"ACF\")\n",
+    "axs[0].plot(acf_[1:], c=\"k\")\n",
+    "\n",
+    "axs[1].set_title(\"PACF\")\n",
+    "axs[1].plot(pacf(df[\"RT\"], nlags=n_lags)[1:], c=\"k\")\n",
+    "\n",
+    "# Lob-Scargle (LS) periodogram\n",
+    "# least squares fit of sine curves\n",
+    "freqs_angular = 2 * np.pi * freqs\n",
+    "powers_ls = lombscargle(x=df.index, y=df[\"RT\"], freqs=freqs_angular)\n",
+    "\n",
+    "axs[2].set_title(\"Periodogram\")\n",
+    "axs[2].plot(freqs, powers_ls, c=\"k\", label=\"Lob-Scargle\")\n",
+    "axs[2].plot(freqs, powers_wk, c=\"r\", label=\"Wiener-Khinchin\")\n",
+    "axs[2].legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def acf_groupby(rt, freq):\n",
+    "    return (\n",
+    "        rt.groupby(pd.Grouper(freq=freq))\n",
+    "        .apply(lambda grp: np.nan if grp.empty else acf(grp, nlags=20, **acf_kwargs)[1:])\n",
+    "        .explode()\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "fig, axs = plt.subplots(nrows=4, figsize=(15, 6), layout=\"constrained\")\n",
+    "\n",
+    "axs[0].set_title(\"421 days, groupby month\")\n",
+    "axs[0].plot(acf_groupby(df[\"RT\"], \"ME\"), \".\", c=\"k\", alpha=0.5)\n",
+    "\n",
+    "axs[1].set_title(\"30 days, groupby day\")\n",
+    "axs[1].plot(acf_groupby(df.loc[\"2008-05\"][\"RT\"], \"24h\"), \".\", c=\"k\", alpha=0.5)\n",
+    "\n",
+    "axs[2].set_title(\"1 day, groupby hour\")\n",
+    "axs[2].plot(acf_groupby(df.loc[\"2008-05-01\"][\"RT\"], \"1h\"), \".\", c=\"k\", alpha=0.5)\n",
+    "\n",
+    "\n",
+    "axs[3].set_title(\"1 hour, groupby 10 minutes\")\n",
+    "axs[3].plot(acf_groupby(df.loc[\"2008-05-01 07\"][\"RT\"], \"10min\"), \".\", c=\"k\", alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acf_by_session = (\n",
+    "    df.loc[\"2008-05\"]\n",
+    "    .groupby(\"sessionNumber\")[\"RT\"]\n",
+    "    .apply(lambda grp: acf(grp, nlags=20, **acf_kwargs)[1:])\n",
+    "    .explode()\n",
+    ")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(20, 6 / 4))\n",
+    "ax.set_title(\"30 days, groupby 'sessionNumber'\")\n",
+    "ax.plot(acf_by_session, \".\", c=\"k\", alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn.objects as so\n",
+    "\n",
+    "# plot coherence vs accuracy\n",
+    "(\n",
+    "    so.Plot(df, x=\"coherence\", y=\"correct\")\n",
+    "    .add(so.Bar(color=\"gray\"), so.Agg(func=\"mean\"))\n",
+    "    .add(so.Range(color=\"k\"), so.Est(errorbar=\"se\"))\n",
+    "    .label(x=\"coherence\", y=\"accuracy\")\n",
+    "    .layout(size=(4, 3))\n",
+    "    .theme({\"axes.facecolor\": \"white\", \"axes.edgecolor\": \"k\"})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot rt distributions\n",
+    "(\n",
+    "    so.Plot(df, x=\"RT\", color=df[\"correct\"].map({1: \"correct\", 0: \"error\"}))\n",
+    "    .facet(col=\"coherence\", wrap=5)\n",
+    "    .add(so.Bars(alpha=0.5), so.Hist(stat=\"density\", bins=100))\n",
+    "    .limit(x=(0, 3))\n",
+    "    .layout(size=(10, 5))\n",
+    "    .label(x=\"RT\", y=\"P(RT)\", title=\"coherence={}\".format)\n",
+    "    .theme({\"axes.facecolor\": \"white\", \"axes.edgecolor\": \"k\"})\n",
     ")"
    ]
   }
