--- a/examples/08-parameter-recovery.ipynb
+++ b/examples/08-parameter-recovery.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.83039854, 0.7870509 ])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -37,15 +48,13 @@
     "X, y = corr_df[\"rt\"].to_numpy(), corr_df[\"response\"].to_numpy()\n",
     "\n",
     "# intitialize ddm\n",
-    "ddm = DriftDiffusionModel(z=0)\n",
+    "ddm = DriftDiffusionModel(t=0, z=0)\n",
     "ddm.fit(X, y)\n",
     "\n",
     "# params for simulation\n",
     "param_names = [\"a\", \"v\"]\n",
     "matrix_names = [f\"{i},{j}\" for i in param_names for j in param_names]\n",
-    "params = ddm.params_\n",
-    "sim_params = {k: v for k, v in zip(param_names, params)}\n",
-    "sim_params[\"z\"] = 0"
+    "ddm.params_"
    ]
   },
   {
@@ -54,15 +63,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "params = ddm.params_\n",
     "n_samples, n_repeats = 900, 1000\n",
     "ddm.set_params(cov_estimator=\"all\")\n",
     "\n",
     "\n",
     "@delayed\n",
     "def run_simulation(repeat):\n",
-    "    X_, y_ = sample_from_pdf(\n",
-    "        **sim_params, n_samples=n_samples, x_range=(1e-5, 4), random_state=repeat\n",
-    "    )\n",
+    "    X_, y_ = sample_from_pdf(a=params[0], v=params[1], n_samples=n_samples, random_state=repeat)\n",
     "    ddm.fit(X_, y_)\n",
     "\n",
     "    corr_df = [\n",
@@ -89,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x15ad97cb0>"
+       "<seaborn.axisgrid.PairGrid at 0x30a9b8ec0>"
       ]
      },
      "execution_count": 3,
@@ -108,15 +116,16 @@
     }
    ],
    "source": [
+    "map_params = dict(zip(param_names, params))\n",
     "g = sns.PairGrid(params_, height=2)\n",
     "g.map_offdiag(sns.scatterplot, color=\"k\", alpha=0.25, size=1)\n",
     "g.map_diag(sns.histplot, color=\"k\", element=\"step\", fill=False)\n",
-    "g.map_diag(lambda x, **kwargs: plt.axvline(sim_params[x.name], c=\"k\", lw=3))"
+    "g.map_diag(lambda x, **kwargs: plt.axvline(map_params[x.name], c=\"k\", lw=3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
