overleaf: add presentation slides

--- a/docs/slides/zotero.bib
+++ b/docs/slides/zotero.bib
@@ -1,4 +1,15 @@
 
+@book{hansen_probability_2022,
+	address = {Princeton ; Oxford},
+	title = {Probability and statistics for economists},
+	isbn = {978-0-691-23594-3},
+	abstract = {"A comprehensive introduction to probability and statistics through the perspective of applying it to economic analysis"--},
+	publisher = {Princeton University Press},
+	author = {Hansen, Bruce E.},
+	year = {2022},
+	file = {Bruce Hansen - Probability and Statistics for Economists (2022, Princeton University Press) - libgen.li.pdf:/Users/griegner/Zotero/storage/V2IL63SH/ Bruce Hansen - Probability and Statistics for Economists (2022, Princeton University Press) - libgen.li.pdf:application/pdf},
+}
+
 @article{nguyen_different_2022,
 	title = {Different {Forms} of {Variability} {Could} {Explain} a {Difference} {Between} {Human} and {Rat} {Decision} {Making}},
 	volume = {16},
@@ -199,6 +210,19 @@
 	file = {Anderson - 1960 - A Modification of the Sequential Probability Ratio.pdf:/Users/griegner/Zotero/storage/67TKRVMZ/Anderson - 1960 - A Modification of the Sequential Probability Ratio.pdf:application/pdf},
 }
 
+@book{feller_introduction_1968,
+	address = {New York Chichester Brisbane [etc.]},
+	edition = {Third ed. rev},
+	series = {Wiley series in probability and mathematical statistics},
+	title = {An introduction to probability theory and its applications},
+	isbn = {978-0-471-25708-0},
+	language = {eng},
+	publisher = {J. Wiley},
+	author = {Feller, William},
+	year = {1968},
+	file = {an-introduction-to-probability-theory-and-its-applications.pdf:/Users/griegner/Zotero/storage/NT4NPLX3/an-introduction-to-probability-theory-and-its-applications.pdf:application/pdf},
+}
+
 @misc{monsalve-mercado_geometry_2025,
 	title = {The geometry of the neural state space of decisions},
 	copyright = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
@@ -211,4 +235,23 @@
 	month = jan,
 	year = {2025},
 	file = {Monsalve-Mercado and Miller - 2025 - The geometry of the neural state space of decision.pdf:/Users/griegner/Zotero/storage/V2YZFCBQ/Monsalve-Mercado and Miller - 2025 - The geometry of the neural state space of decision.pdf:application/pdf},
+}
+
+@article{smith_stochastic_2000,
+	title = {Stochastic {Dynamic} {Models} of {Response} {Time} and {Accuracy}: {A} {Foundational} {Primer}},
+	volume = {44},
+	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+	issn = {00222496},
+	shorttitle = {Stochastic {Dynamic} {Models} of {Response} {Time} and {Accuracy}},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022249699912609},
+	doi = {10.1006/jmps.1999.1260},
+	language = {en},
+	number = {3},
+	urldate = {2025-02-27},
+	journal = {Journal of Mathematical Psychology},
+	author = {Smith, Philip L.},
+	month = sep,
+	year = {2000},
+	pages = {408--463},
+	file = {Smith - 2000 - Stochastic Dynamic Models of Response Time and Acc.pdf:/Users/griegner/Zotero/storage/SHGWGGMB/Smith - 2000 - Stochastic Dynamic Models of Response Time and Acc.pdf:application/pdf},
 }
