--- a/docs/slides/slides-04MAR2025.tex
+++ b/docs/slides/slides-04MAR2025.tex
@@ -190,7 +190,7 @@ from \citet[Chapter~10]{hansen_probability_2022}
     \begin{itemize}
         \item Drift diffusion model describes how brains process noisy information during two-choice decision tasks \vspace{0.25cm}
         
-        \item MLE provides consistent point and interval estimators for model parameters and there covariances from speed/accuracy behavioral data \vspace{0.25cm}
+        \item MLE provides consistent point and interval estimators for model parameters and their standard errors from speed/accuracy behavioral data \vspace{0.25cm}
         
         \item Generalized estimation framework robust to model misspecification and autocorrelation in reaction times \vspace{0.25cm}
         
